<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".Views.Fragments.ProfileFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/ic_launcher_background"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        
        <!-- Email Label -->
        <EditText
            android:id="@+id/input_email_login"
            style="@style/classic_input"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email" />
        

        <!-- Password Label -->
        <EditText android:id="@+id/input_password_login"
            style="@style/classic_input"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"/>
        

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/primary_btn"
            android:text="@string/action_sign_in"/>

        <TextView
            android:id="@+id/link_signup"
            style="@style/link_btn"
            android:text="@string/action_sign_up" />

    </LinearLayout>
</ScrollView>